PROJECT(jshost)
INCLUDE_DIRECTORIES(../js/src)
INCLUDE_DIRECTORIES(../js/src/Linux_All_OPT.OBJ)
LINK_DIRECTORIES(../js/src/Linux_All_OPT.OBJ)
LINK_DIRECTORIES(../moduleManager)

FILE(GLOB SRC_FILES ./*.cpp )

ADD_EXECUTABLE(jshost ${SRC_FILES})

TARGET_LINK_LIBRARIES(jshost js dl moduleManager.a m.a)


IF(CMAKE_COMPILER_IS_GNUCXX)
        SET(CMAKE_CXX_COMPILER gcc)
        ADD_DEFINITIONS(-fno-exceptions -fno-rtti -felide-constructors)
        SET(CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} -static-libgcc")
        SET(CMAKE_CXX_CREATE_SHARED_LIBRARY "${CMAKE_CXX_CREATE_SHARED_LIBRARY} -static-libgcc")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
