PROJECT(jsstd)
INCLUDE_DIRECTORIES(../js/src)
INCLUDE_DIRECTORIES(../js/src/Linux_All_OPT.OBJ)

FILE(GLOB SRC_FILES ./*.cpp )

ADD_LIBRARY(jsstd SHARED ${SRC_FILES})


IF(CMAKE_COMPILER_IS_GNUCXX)
        SET(CMAKE_CXX_COMPILER gcc)
        SET(CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} -static-libgcc")
        SET(CMAKE_CXX_CREATE_SHARED_LIBRARY "${CMAKE_CXX_CREATE_SHARED_LIBRARY} -static-libgcc")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
